[package]
name = "systemctl-tui"
description = "A simple TUI for interacting with systemd services and their logs"
homepage = "https://github.com/rgwood/systemctl-tui"
repository = "https://github.com/rgwood/systemctl-tui"
version = "0.3.5"
edition = "2021"
authors = ["Reilly Wood"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = {version = "0.26.2"}
crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
unicode-segmentation = "1.10.1"
anyhow = "1.0.71"
better-panic = "0.3.0"
clap = { version = "4.3.4", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
clap_complete = "4.3.1"
futures = "0.3.28"
tracing-macros = "0.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.11.1"
directories = "5.0.1"
tui-logger = { version = "0.11.1", default-features = false, features = [
  "tracing-support",
] }
colored = "2.0.0"
log = "0.4.19"
libc = "0.2.146"
tui-input = "0.8.0"
signal-hook = "0.3.15"
tokio-util = "0.7.8"
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
itertools = "0.12.0"
indexmap = "2.0.0"
clipboard-anywhere = "0.2.2"
chrono = { version = "0.4.31", default-features = false }
lazy_static = "1.4.0"
nix = { version = "0.28.0", features = ["user"] }
is-wsl = "0.4.0"

# build with `cargo build --profile profiling`
# to analyze performance with tooling like perf / samply / superluminal
[profile.profiling]
inherits = "release"
strip = false
debug = true

[profile.release]
lto = true      # Enable Link Time Optimization (slow but makes a huge size difference)
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces

[[bin]]
name = "systemctl-tui"
path = "src/main.rs"
