[package]
name = "systemctl-tui"
description = "A simple TUI for interacting with systemd services and their logs"
homepage = "https://github.com/rgwood/systemctl-tui"
repository = "https://github.com/rgwood/systemctl-tui"
version = "0.4.1"
edition = "2021"
authors = ["Reilly Wood"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
tokio = { version = "1.28.2", features = ["full"] }
unicode-segmentation = "1.10.1"
anyhow = "1.0.71"
better-panic = "0.3.0"
clap = { version = "4.3.4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles", "env"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
directories = "6.0.0"
tui-logger = { version = "0.17.3", default-features = false, features = [
  "tracing-support",
] }
log = "0.4.19"
libc = "0.2.146"
tui-input = "0.12.1"
signal-hook = "0.3.15"
tokio-util = "0.7.8"
zbus = { version = "5", default-features = false, features = ["tokio"] }
fuzzy-matcher = "0.3"
itertools = "0.14.0"
indexmap = "2.0.0"
clipboard-anywhere = "0.2.2"
chrono = { version = "0.4.31", default-features = false }
lazy_static = "1.4.0"
nix = { version = "0.30.1", features = ["user"] }
is-wsl = "0.4.0"
tracing-appender = "0.2.3"
terminal-light = "1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"

# build with `cargo build --profile profiling`
# to analyze performance with tooling like perf / samply / superluminal
[profile.profiling]
inherits = "release"
strip = false
debug = true

[profile.release]
lto = true      # Enable Link Time Optimization (slow but makes a huge size difference)
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces

[[bin]]
name = "systemctl-tui"
path = "src/main.rs"
