[workspace]
resolver = "2"
members = ["crates/systemctl-core", "crates/systemctl-tui", "crates/systemctl-gui"]
# The GUI needs GTK 4 system libraries, so a plain `cargo build` skips it.
# Build it explicitly with `cargo build -p systemctl-gui`.
default-members = ["crates/systemctl-core", "crates/systemctl-tui"]

# build with `cargo build --profile profiling`
# to analyze performance with tooling like perf / samply / superluminal
[profile.profiling]
inherits = "release"
strip = false
debug = true

[profile.release]
lto = true      # Enable Link Time Optimization (slow but makes a huge size difference)
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces
